fix: update event-details template *fix layout issues on buttons *fix text width to avoid overflow *add going/attending stats to details and style them

--- a/public/styles/event-details.css
+++ b/public/styles/event-details.css
@@ -21,6 +21,12 @@
     margin-bottom: 0.5em;
 
 }
+.text-container{
+    display: flex; flex-direction: row; width: 100%;
+}
+.text{
+    width: 70%;
+}
 .name{
     font-size: 1.5rem;
     font-weight: bold;
@@ -35,6 +41,9 @@ hr{
     width: 70%;
     align-self: center;
 }
+.interact-button:first-child{
+    margin-right: 2%;
+}
 .interact-button{
     background-color: #d0d0d0;
     border: 1px solid transparent;
@@ -44,16 +53,18 @@ hr{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-right: 2em;
     cursor: pointer;
+    font-size: 1rem;
 }
 .buttons{
     display:flex;
     flex-direction: row;
     align-items: center;
-    align-self: center;
     margin-top: 1em;
-    margin-left: 50%;
+    justify-content: flex-end;
+    width: 70%;
+    align-self:center;
+
 }
 
 .row.small {
